home/Deployments/blog-ni/StatefulSets.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: blog-ni-app
  namespace: blog-ni-system
spec:
  serviceName: blog-ni-app-svc
  replicas: 4
  selector:
    matchLabels:
      app: blog-ni-app
  template:
    metadata:
      labels:
        app: blog-ni-app
    spec:
      containers:
        - name: nginx-static-ha
          image: steffenblake/nginx-static-ha:1.0.4
          ports:
            - containerPort: 80
          volumeMounts:
            - name: blog-ni-static-mount
              mountPath: /static
              subPath: programs/blog-ni
              readOnly: true
            - name: blog-ni-timezone-host
              mountPath: /etc/timezone
              readOnly: true
            - name: blog-ni-localtime-host
              mountPath: /etc/localtime
              readOnly: true
      volumes:
      - name: blog-ni-static-mount
        persistentVolumeClaim:
          claimName: blog-ni-static-pvc
      - name: blog-ni-timezone-host
        hostPath:
          path: /etc/timezone
          type: File
      - name: blog-ni-localtime-host
        hostPath:
          path: /etc/localtime
          type: File

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: blog-ni-builder-app
  namespace: blog-ni-system
spec:
  serviceName: blog-ni-builder-app-svc
  replicas: 1
  selector:
    matchLabels:
      app: blog-ni-builder-app
  template:
    metadata:
      labels:
        app: blog-ni-builder-app
    spec:
      containers:
        - name: webhook-hugo
          image: steffenblake/webhook-hugo:1.0.16
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: blog-ni-www-mount
              mountPath: /www
              subPath: programs/blog-ni
            - name: after-deploy-volume
              mountPath: /after-deploy.sh
              subPath: after-deploy.sh
              readOnly: true
            - name: gogs-ssh-volume
              mountPath: /home/webhook/.ssh
              subPath: programs/gogs/webhook-blog-ni
            - name: blog-ni-timezone-host
              mountPath: /etc/timezone
              readOnly: true
            - name: blog-ni-localtime-host
              mountPath: /etc/localtime
              readOnly: true
      volumes:
      - name: blog-ni-www-mount
        persistentVolumeClaim:
          claimName: blog-ni-www-pvc
      - name: after-deploy-volume
        configMap:
          name: blog-ni-after-deploy-config
      - name: gogs-ssh-volume
        persistentVolumeClaim:
          claimName: blog-ni-gogs-ssh-pvc
      - name: blog-ni-timezone-host
        hostPath:
          path: /etc/timezone
          type: File
      - name: blog-ni-localtime-host
        hostPath:
          path: /etc/localtime
          type: File
