home/Deployments/blog-ni/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ni-ingress
  namespace: blog-ni-system
spec:
  ingressClassName: nginx-external
  rules:
  - host: nightmares.technically.fun
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog-ni-svc
            port:
              number: 80
